<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="tech.ericntd.githubsearch.search.SearchViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="tech.ericntd.githubsearch.search.MainActivity">

        <EditText
            android:id="@+id/et_search_query"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter keyword e.g. android"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:maxLines="1"
            android:paddingLeft="16dp"
            android:singleLine="true" />

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:text="@{vm.status}"
            app:layout_constraintTop_toBottomOf="@id/et_search_query"
            tools:text="Number of results: 1000000" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_repos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/tv_status" />

    </android.support.constraint.ConstraintLayout>
</layout>
